--- a/styles/10-rock-paper-scissors.css
+++ b/styles/10-rock-paper-scissors.css
@@ -53,3 +53,15 @@ body {
 .link {
   color: white;
 }
+
+.warning-container {
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  display: none;
+}
+
+.warning-button {
+  margin-left: 10px;
+  padding: 5px;
+}
